--- a/css/site.css
+++ b/css/site.css
@@ -47,6 +47,9 @@ body.light-theme {
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-duration: 3s;
+    
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    /* animation-timing-function: ease; */
 }
 
 .center {
