--- a/css/site.css
+++ b/css/site.css
@@ -65,7 +65,7 @@ body.light-theme {
 
 @keyframes myQuickAnimation {
     0%{
-        transform: translate(500px, -50%);
+        transform: translate(500px, -50%) rotate(180deg);
     }
     100% {
         transform: translate(-50%, -50%);
