Simple Tauren animation.

--- a/css/site.css
+++ b/css/site.css
@@ -13,9 +13,9 @@
     --secondary: hsl(192, 100%, 99%);
 }
 
-body {
+body, span {
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-weight: 900;
 }
 
 body.dark-theme {
@@ -37,16 +37,17 @@ body.light-theme {
 }
 
 .hero-banner h1 {
+    overflow: hidden;
     font-weight: 100;
     letter-spacing: 1rem;
     white-space: nowrap;
-    backface-visibility: hidden;
 
     /* text-transform: uppercase; */
-    animation-name: myQuickAnimation;
+    /* animation-name: myQuickAnimation;
+    backface-visibility: hidden;
     animation-delay: 0s;
     animation-iteration-count: 1;
-    animation-duration: 3s;
+    animation-duration: 3s; */
     
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     /* animation-timing-function: ease; */
@@ -62,7 +63,47 @@ body.light-theme {
     transform: translate(-50%,-50%);
 }
 
+.hire-me {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    animation-name: hireMeTransition;
+    animation-duration: 3s;
+    backface-visibility: hidden;
+}
 
+.quote {
+    position: absolute;
+    left: -210px;
+    top: -50px;
+    height: 300px;
+    width: 300px;
+    border: 1px solid black;
+    background-color: white;
+    color:black;
+    clip-path: polygon(16% 69%, 9% 61%, 9% 52%, 13% 43%, 17% 38%, 23% 35%, 30% 34%, 38% 34%, 48% 36%, 55% 37%, 59% 41%, 61% 46%, 61% 53%, 61% 60%, 56% 65%, 68% 70%, 78% 71%, 68% 74%, 56% 74%, 50% 71%, 41% 72%, 37% 74%, 28% 75%);
+}
+
+.quote > span {
+    position: relative;
+    top: 124px;
+    left: -45px;
+}
+
+.hire-me > img {
+    width: 300px;
+}
+
+@keyframes hireMeTransition {
+    0%{
+        transform: translateY(200px)
+    }
+    100% {
+        transform: translateY(0px)
+    }
+}
+
+/*
 @keyframes myQuickAnimation {
     0%{
         transform: translate(500px, -50%) rotate(180deg);
@@ -71,3 +112,4 @@ body.light-theme {
         transform: translate(-50%, -50%);
     }
 }
+*/
