--- a/css/site.css
+++ b/css/site.css
@@ -74,24 +74,35 @@ body.light-theme {
 
 .quote {
     position: absolute;
-    left: -210px;
-    top: -50px;
-    height: 300px;
-    width: 300px;
-    border: 1px solid black;
+    left: -70px;
+    top: 37px;
+    height: 110px;
+    width: 120px;
     background-color: white;
     color:black;
-    clip-path: polygon(16% 69%, 9% 61%, 9% 52%, 13% 43%, 17% 38%, 23% 35%, 30% 34%, 38% 34%, 48% 36%, 55% 37%, 59% 41%, 61% 46%, 61% 53%, 61% 60%, 56% 65%, 68% 70%, 78% 71%, 68% 74%, 56% 74%, 50% 71%, 41% 72%, 37% 74%, 28% 75%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+    z-index: 99;
+}
+.quote-shadow {
+    position: absolute;
+    left: -73px;
+    top: 35px;
+    height: 120px;
+    width: 130px;
+    background-color: black;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+    z-index: 98;
 }
 
 .quote > span {
+    top:5px;
     position: relative;
-    top: 124px;
-    left: -45px;
 }
 
 .hire-me > img {
     width: 300px;
+    position: relative;
+    z-index: 100;
 }
 
 @keyframes hireMeTransition {
